# example-c-design-patterns

factory/: CMakeLists.txt  LICENSE.md  README.md
factory/include/: abstractFactory.h  factory.h  singleton.h
factory/tests/: CMakeLists.txt  demoTypes.h  factoryTest.h  optionsTest.h  runTests.cc  singletonTest.h  trialsTest.h  trialsTest.h~
